Fixed the gap between background and experience section , moved footer temprory, needs more works on flex items size

--- a/experience.css
+++ b/experience.css
@@ -1,3 +1,62 @@
-html{
-    
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+
+
+html {
+    background-color: #9bf6ff;
+    font-family: 'Oswald', sans-serif;
+    width: auto;
+}
+
+
+#headerExperience {
+    line-height: 200px;
+    font-family: "proxima nova bold", "Helvetica Neue", Helvetica, Arial,
+        sans-serif;
+    color: khaki;
+    background-color: steelblue;
+    background-image: url("images/Experience\ background\ imagee.jpg") ;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-align: center;
+
+}
+.container {
+display: flex;
+height: 100vh;
+flex-direction: column;
+gap:25px;
+align-items: center;
+
+}
+.century, .soleiman, .LNA {
+
+    border: 2px solid black;
+    font-size: 16px;
+    background-color: #E5ECE9;
+    display: block;
+
+
+}
+.centur,.soleiman,.LNA{
+    display: flex;
+    gap:25px;
+    flex-direction: column;
+     align-items: center;
+     justify-content: center;
+
+}
+.headers,.tasks {
+    display: block;
+    align-content: space-around;
+
+
+
+}
+
+
